# capture_walking_controller

./: CITATION.cff  CMakeLists.txt  README.md  package.xml
etc/: CaptureWalking.conf.cmake  display.rviz  mc_rtc.conf
etc/mc_log_ui/: custom_plot.json
include/capture_walking/: CaptureProblem.h  CaptureSolution.h  Contact.h  Controller.h  FloatingBaseObserver.h  FootstepPlan.h  HorizontalMPC.h  HorizontalMPCProblem.h  HorizontalMPCSolution.h  Pendulum.h  PendulumObserver.h  Preview.h  Sole.h  Stabilizer.h  State.h  SwingFoot.h  defs.h
include/capture_walking/utils/: AvgStdEstimator.h  Integrator.h  Interval.h  LowPassVelocityFilter.h  VelocityFilter.h  clamp.h  polynomials.h  ros.h  rotations.h
launch/: display.launch
src/: CMakeLists.txt  CaptureProblem.cpp  CaptureSolution.cpp  Controller.cpp  FloatingBaseObserver.cpp  FootstepPlan.cpp  HorizontalMPCProblem.cpp  HorizontalMPCSolution.cpp  Pendulum.cpp  PendulumObserver.cpp  Python.cpp  Stabilizer.cpp  SwingFoot.cpp  lib.cpp  ros.cpp
src/states/: CMakeLists.txt  DoubleSupport.cpp  DoubleSupport.h  Initial.cpp  Initial.h  SingleSupport.cpp  SingleSupport.h  Standing.cpp  Standing.h
