# Copyright 2018-2019 CNRS-UM LIRMM
#
# This file is part of capture_walking_controller.
#
# capture_walking_controller is free software: you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.
#
# capture_walking_controller is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser
# General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with capture_walking_controller. If not, see
# <http://www.gnu.org/licenses/>.

set(FSM_STATES_INSTALL_PREFIX "${MC_RTC_LIBDIR}/mc_controller/${PROJECT_NAME}/states")

macro(add_fsm_state state_name state_SRC state_HDR)
  add_library(${state_name} SHARED  ${state_SRC} ${state_HDR})
  set_target_properties(${state_name}
      PROPERTIES
      PREFIX ""
      LIBRARY_OUTPUT_DIRECTORY "${CATKIN_DEVEL_PREFIX}/lib/${PROJECT_NAME}/states")
  target_link_libraries(${state_name} capture_walking_controller)
  install(TARGETS ${state_name} DESTINATION ${FSM_STATES_INSTALL_PREFIX})
  install(FILES ${state_HDR} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mc_control/fsm/states)
endmacro()

macro(add_fsm_state_simple state_name)
  add_fsm_state(${state_name} ${state_name}.cpp ${state_name}.h)
endmacro()

add_fsm_state_simple(DoubleSupport)
add_fsm_state_simple(Initial)
add_fsm_state_simple(SingleSupport)
add_fsm_state_simple(Standing)
